# Cyclebite

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Grammar/: BasePointer.cpp  BinaryOperator.cpp  CMakeLists.txt  Categorize.cpp  Collection.cpp  ConstantFunction.cpp  ConstantSymbol.cpp  Cycle.cpp  Expression.cpp  Grammar.cpp  InductionVariable.cpp  Process.cpp  Reduction.cpp  ReductionVariable.cpp  Symbol.cpp  Task.cpp
Grammar/inc/: BasePointer.h  BinaryOperator.h  Categorize.h  Collection.h  ConstantFunction.h  ConstantSymbol.h  Cycle.h  Expression.h  Function.h  InductionVariable.h  Process.h  Reduction.h  ReductionVariable.h  Symbol.h  Task.h
Grammar/lib/: BasePointer.cpp  CMakeLists.txt  Categorize.cpp  Collection.cpp  ConstantArray.cpp  ConstantFunction.cpp  ConstantSymbol.cpp  Counter.cpp  Cycle.cpp  Dimension.cpp  Export.cpp  Expression.cpp  Function.cpp  FunctionCallArgs.cpp  FunctionExpression.cpp  IO.cpp  IndexVariable.cpp  InductionVariable.cpp  Memory.cpp  Multiplexer.cpp  OperatorExpression.cpp  Process.cpp  Reduction.cpp  ReductionVariable.cpp  Symbol.cpp  Task.cpp  TaskParameter.cpp
Grammar/lib/inc/: BasePointer.h  Categorize.h  Collection.h  ConstantArray.h  ConstantFunction.h  ConstantSymbol.h  Counter.h  Cycle.h  Dimension.h  Export.h  Expression.h  Function.h  FunctionCallArgs.h  FunctionExpression.h  Grammar.h  IO.h  IndexVariable.h  InductionVariable.h  Memory.h  Multiplexer.h  OperatorExpression.h  Polyhedral.h  Process.h  Reduction.h  ReductionVariable.h  Symbol.h  Task.h  TaskParameter.h
Grammar/test/: .gitignore  Buildflow.mk  Environment.mk  test.py
Grammar/test/BP/: Makefile  testBP.cpp
Grammar/test/Cases/GEMM/OPFLAG_O0_DEBUG_G0/: BlockInfo_GEMM.json  GEMM.bc  GEMM.markov.ll  instance_GEMM.json  (+1 more)
Grammar/test/Coll/: Makefile  testColl.cpp
Grammar/test/IV/: Makefile  testIV.cpp
Grammar/test/RV/: Makefile  testRV.cpp
Graph/: Arg.cpp  CMakeLists.txt  CallEdge.cpp  CallGraph.cpp  CallGraphEdge.cpp  CallGraphNode.cpp  CallNode.cpp  ConditionalEdge.cpp  ControlBlock.cpp  ControlGraph.cpp  ControlNode.cpp  DataGraph.cpp  DataNode.cpp  DataValue.cpp  Dijkstra.cpp  Graph.cpp  GraphEdge.cpp  GraphNode.cpp  IO.cpp  ImaginaryEdge.cpp  ImaginaryNode.cpp  Inst.cpp  MLCycle.cpp  Operation.cpp  ReturnEdge.cpp  Transforms.cpp  UnconditionalEdge.cpp  VirtualEdge.cpp  VirtualNode.cpp
Graph/TestBench/: FunctionInline_tb.cpp  Makefile  Segmentation_tb.cpp  Transforms_tb.cpp
Graph/inc/: Arg.h  CallEdge.h  CallGraph.h  CallGraphEdge.h  CallGraphNode.h  CallNode.h  ConditionalEdge.h  ControlBlock.h  ControlGraph.h  ControlNode.h  DataGraph.h  DataNode.h  DataValue.h  Dijkstra.h  Graph.h  GraphEdge.h  GraphNode.h  IO.h  ImaginaryEdge.h  ImaginaryNode.h  Inst.h  MLCycle.h  Operation.h  ReturnEdge.h  Transforms.h  UnconditionalEdge.h  VirtualEdge.h  VirtualNode.h
Profile/Backend/: CMakeLists.txt
Profile/Backend/HashTable/: CMakeLists.txt  DashHashTable.c
Profile/Backend/HashTable/inc/: DashHashTable.h
Profile/Backend/Markov/: CMakeLists.txt  Markov.cpp
Profile/Backend/Markov/inc/: Markov.h
Profile/Backend/Memory/: CMakeLists.txt  CodeInstance.cpp  CodeSection.cpp  Epoch.cpp  IO.cpp  Instance.cpp  Iteration.cpp  Kernel.cpp  Memory.cpp  Memory_old.cpp  NonKernel.cpp  Processing.cpp  UniqueID.cpp
Profile/Backend/Memory/inc/: CodeInstance.h  CodeSection.h  Epoch.h  IO.h  Iteration.h  Kernel.h  LastWriter.h  Memory.h  MemoryTuple.hpp  NonKernel.h  Processing.h  UniqueID.h
Profile/Backend/Precision/: CMakeLists.txt  Precision.cpp
Profile/Backend/Precision/inc/: Precision.h
Profile/Backend/Tests/: ClashResolveAccuracy.c  IO.c  IndexClash.c  simple.c
Profile/Backend/ThreadSafe/: AtomicQueue.cpp  CMakeLists.txt  Task.cpp  ThreadSafeQueue.cpp
Profile/Backend/ThreadSafe/inc/: AtomicQueue.h  Task.h  ThreadSafeQueue.h
Profile/Backend/ThreadSafe/test/: Makefile  test_Queue.cpp  test_Queue_HT.cpp
Profile/Backend/Utilities/: CMakeLists.txt  Papi.c  Timing.cpp  Trace.c
Profile/Backend/Utilities/inc/: Papi.h  Trace.h
Profile/Passes/: CMakeLists.txt
Profile/Passes/Annotate/: Annotate.cpp  CMakeLists.txt
Profile/Passes/Annotate/inc/: Annotate.h
Profile/Passes/Loop/: CMakeLists.txt  LoopDetector.cpp  LoopInfoDump.cpp
Profile/Passes/Loop/inc/: LoopInfoDump.h
Profile/Passes/Markov/: CMakeLists.txt  Markov.cpp  MarkovIO.cpp
Profile/Passes/Markov/inc/: Markov.h  MarkovIO.h
Profile/Passes/Memory/: CMakeLists.txt  Instance.cpp  LastWriter.cpp  MemProfile.cpp  Memory.cpp
Profile/Passes/Memory/inc/: Instance.h  LastWriter.h  MemProfile.h  Memory.h
Profile/Passes/NPM/: CMakeLists.txt  HelloWorld.cpp
Profile/Passes/NPM/inc/: HelloWorld.h
Profile/Passes/Papi/: CMakeLists.txt  PapiExport.cpp  PapiIO.cpp
Profile/Passes/Papi/inc/: PapiExport.h  PapiIO.h
Profile/Passes/Precision/: CMakeLists.txt  Precision.cpp
Profile/Passes/Precision/inc/: Precision.h
Profile/Passes/Timing/: CMakeLists.txt  Timing.cpp
Profile/Passes/Timing/inc/: Timing.h
Profile/Passes/Trace/: CMakeLists.txt  Trace.cpp  TraceIO.cpp  TraceMem.cpp  TraceMemIO.cpp
Profile/Passes/Trace/inc/: Trace.h  TraceIO.h  TraceMem.h  TraceMemIO.h
Profile/Passes/Utilities/: AddLibrary.cpp  Annotate.cpp  CMakeLists.txt  CommandArgs.cpp  Functions.cpp  Timing.cpp
Profile/Passes/Utilities/inc/: AddLibrary.h  Annotate.h  Functions.h  Timing.h
Tests/1DBlur/: 1DBlur.c  CMakeLists.txt
Tests/1DCondition/: 1DCondition.c  CMakeLists.txt
Tests/2DConv/: 2DConv.c  CMakeLists.txt
Tests/FunctionCall/: CMakeLists.txt  FunctionCall.c
Tests/MatrixMultiply/: CMakeLists.txt  main.c
Tests/Multithread/: CMakeLists.txt  OptimizedGEMM.c
Tests/Recurse/: CMakeLists.txt  Recurse.c
Tests/STL_Test/: CMakeLists.txt  Makefile  STL_Test.cpp
Tests/SharedFunction/: CMakeLists.txt  SharedFunction.c
Tests/bubbleSort/: CMakeLists.txt  bubbleSort.c
Util/: Annotate.h  CMakeLists.txt  Exceptions.h  Format.h  Helpers.h  IO.h  Print.h  Split.h
Utilities/: CMakeLists.txt  CallGraph.cpp  DFG.cpp  DynamicCoverage.cpp  LoopInfoPass.cpp  Makefile  PrintCFG.cpp  kernelSourceMapper.cpp
(+23 files in other folders)
