set(PRECISION_B_INC ${CMAKE_SOURCE_DIR}/Profile/)
set(MEMORY_B_INC ${CMAKE_SOURCE_DIR}/Profile/Backend/Memory/inc)
set(UTILITIES_INC "../Utilities/inc")
#set(MARKOV_INC "inc")
#set(MEMORY_INC "inc")
#set(NPM_INC "NPM/inc")

add_subdirectory("Annotate")
#add_subdirectory("Loop")
add_subdirectory("Markov")
add_subdirectory("Memory")
#add_subdirectory("Precision")
add_subdirectory("Timing")
#add_subdirectory("Utilities")
add_subdirectory("NPM")