add_library(AnnotatePass MODULE)
target_sources(AnnotatePass PRIVATE Annotate.cpp)
target_link_libraries(AnnotatePass PRIVATE nlohmann_json Util)
target_compile_definitions(AnnotatePass PRIVATE ${LLVM_DEFINITIONS})
set_target_properties(AnnotatePass PROPERTIES PREFIX "" LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
target_include_directories(AnnotatePass PRIVATE ${ANNOTATE_INC} ${UTILITIES_INC})
install(TARGETS AnnotatePass LIBRARY DESTINATION lib)